Add llm function